test/fail/invalid_types7.min
program
    function string hello do
        return 3 > 2
start
end
